# wsuks

./: LICENSE  README.md  pyproject.toml
.github/workflows/: wsuks-test.yml
wsuks/: wsuks.py
wsuks/executables/: Enable-LocalAccountTokenFilterPolicy.ps1
wsuks/helpers/: argparser.py  arpspoofer.py  logger.py  regpol_parser.py  router.py  sysvolparser.py  wsusserver.py
wsuks/lib/: argparser.py  arpspoofer.py  logger.py  router.py  sysvolparser.py
wsuks/xml_files/: get-config.xml  get-extended-update-info.xml  sync-updates.xml
