[project]
name = "wsuks"
version = "0.5.0"
description = "A Tool for automating the MITM attack on WSUS"
authors = [
    {name = "Alexander Neff",email = "alex99.neff@gmx.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "impacket (>=0.12.0,<0.13.0)",
    "scapy (>=2.6.1,<3.0.0)",
    "termcolor (>=2.4.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.3.1,<6.0.0)",
    "netifaces (>=0.11.0,<0.12.0)"
]

[project.urls]
homepage = "https://github.com/NeffIsBack/wsuks"
repository = "https://github.com/Pennyw0rth/NetExec"

[project.scripts]
wsuks = "wsuks.wsuks:main"

[tool.poetry]
packages = [{ include = "wsuks" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
